--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server",
   "name": "mangaloyalty",
   "repository": "git://github.com/mangaloyalty/mangaloyalty",
-  "version": "0.4.0",
+  "version": "0.4.2",
   "bin": {
     "mangaloyalty": "./bin/mangaloyalty"
   },
@@ -15,14 +15,19 @@
   },
   "dependencies": {
     "express": "4.17.1",
-    "mangaloyalty-client": "0.4.0",
-    "mangaloyalty-server": "0.4.0"
+    "mangaloyalty-client": "0.4.1",
+    "mangaloyalty-server": "0.4.2",
+    "source-map-support": "0.5.13"
   },
   "devDependencies": {
-    "electron": "6.0.10"
+    "electron": "6.0.10",
+    "electron-builder": "21.2.0",
+    "electron-webpack": "2.7.4",
+    "webpack": "4.35.0"
   },
   "scripts": {
+    "build": "electron-webpack && electron-builder",
     "start": "node .",
-    "ui": "electron ui.js"
+    "test": "electron app"
   }
 }
