--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server",
   "name": "mangaloyalty",
   "repository": "git://github.com/mangaloyalty/mangaloyalty",
-  "version": "0.11.1",
+  "version": "0.12.1",
   "bin": {
     "mangaloyalty": "./bin/mangaloyalty"
   },
@@ -15,8 +15,8 @@
   },
   "dependencies": {
     "express": "4.17.1",
-    "mangaloyalty-client": "0.11.1",
-    "mangaloyalty-server": "0.11.1",
+    "mangaloyalty-client": "0.12.1",
+    "mangaloyalty-server": "0.12.1",
     "source-map-support": "0.5.13"
   },
   "devDependencies": {
@@ -29,6 +29,6 @@
     "app": "electron app",
     "release": "electron-webpack && electron-builder",
     "release:wine": "electron-webpack && electron-builder -w",
-    "start": "node ."
+    "start": "node server"
   }
 }
