--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "author": "Roel van Uden",
-  "description": "Your personal manga collection on your server. Your content, your rules.",
+  "description": "Your personal manga collection on your device. Your content, your rules.",
   "license": "MIT",
   "main": "server",
   "name": "mangaloyalty",
